updated entire repository for missing/modified files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,14 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "coroutine": "cpp",
+        "numbers": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stop_token": "cpp"
     },
     "python.testing.unittestArgs": [
         "-v",
