modified vscode file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,7 +80,12 @@
         "numbers": "cpp",
         "ranges": "cpp",
         "span": "cpp",
-        "stop_token": "cpp"
+        "stop_token": "cpp",
+        "barrier": "cpp",
+        "source_location": "cpp",
+        "latch": "cpp",
+        "semaphore": "cpp",
+        "syncstream": "cpp"
     },
     "python.testing.unittestArgs": [
         "-v",
