updated from laptop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -139,7 +139,28 @@
         "__string": "cpp",
         "__threading_support": "cpp",
         "__tuple": "cpp",
-        "__functional_base": "cpp"
+        "__functional_base": "cpp",
+        "xstddef": "cpp",
+        "format": "cpp",
+        "xstring": "cpp",
+        "xhash": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp",
+        "xiosbase": "cpp",
+        "xfacet": "cpp",
+        "xlocale": "cpp",
+        "xlocbuf": "cpp",
+        "xlocinfo": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xloctime": "cpp",
+        "xmemory": "cpp",
+        "xtr1common": "cpp",
+        "expected": "cpp",
+        "spanstream": "cpp",
+        "stacktrace": "cpp",
+        "stdfloat": "cpp"
     },
     "python.testing.unittestArgs": [
         "-v",
